objects/Guest__c.object
<CustomObject>
    <description>Guest Object</description>
    <fields>
        <fullName>Age_days__c</fullName>
        <formula>IF( Closed__c , Closed_Date_Time__c -CreatedDate,NOW()-CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_range__c</fullName>
        <formula>IF(Age_days__c&lt;1,&quot;0-24 hours&quot;, 
IF(Age_days__c&lt;2,&quot;24-48 hours&quot;, 
IF(Age_days__c&lt;3,&quot;48-72 hours&quot;,
&quot;&gt;72 hours&quot;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (range)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Hotel_Contact__c</fullName>
        <label>Suggested Hotel Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guests (Suggested Hotel Contact)</relationshipLabel>
        <relationshipName>Guests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Vendor__c</fullName>
        <label>Suggested Hotel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guests (Suggested Hotel)</relationshipLabel>
        <relationshipName>Guests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Office__c</fullName>
        <label>Assigned Office</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA - Egencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuala Lumpur – APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States - APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuala Lumpur – NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prague – NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prague – EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Notification_Status__c</fullName>
        <label>Auto Notification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Net_Difference__c</fullName>
        <formula>IF(OR(ISPICKVAL(Difference_Absorbed_By__c,&quot;Cancellation&quot;),New_Booking_Total__c &gt; 0),(New_Booking_Total__c - Customer_Payout_Amount__c) - Original_Booking_Total__c,0) + Trans_Parking_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Net Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Site__c</fullName>
        <label>Booking Site</label>
        <picklist>
            <picklistValues>
                <fullName>APAC Affiliate (OU4014)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Brand (OU4004)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive - Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive - WWTE Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive - WWTE France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive - WWTE Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive - WWTE Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Brand (OU4003)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Affiliate (OU4013)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Brand (OU 4001)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Flanker (OU4015)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Other (OU4012)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E4TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN APAC USD (TPID 5200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Australia AUD (TPID 5201)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Brazil BRL (TPID 5003)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Canada CAD (TPID 5002)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN China CNY (TPID 5208)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Denmark DKK (TPID 5110)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN EMEA EUR (TPID 5180)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN EMEA USD (TPID 5100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Germany EUR (TPID 5102)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Hong Kong HKD (TPID 5205)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN India INR (TPID 5202)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Israel ILS (TPID 5113)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Italy EUR (TPID 5103)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Japan JPY (TPID 5203)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN Korea KRW (TPID 5207)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Supervisor_Cost_Approval__c</fullName>
        <label>CS Supervisor Cost Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Check_In_formula__c</fullName>
        <formula>TEXT(MONTH(Arrival_Date__c))&amp;&quot;/&quot;&amp;TEXT(DAY(Arrival_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-In (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <label>Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Date_Time__c</fullName>
        <label>Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coupon_Amount__c</fullName>
        <label>Coupon Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Payout_Amount__c</fullName>
        <label>Customer Payout Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_TUID__c</fullName>
        <label>Customer TUID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difference_Absorbed_By__c</fullName>
        <label>Difference Absorbed By</label>
        <picklist>
            <picklistValues>
                <fullName>Cancellation - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation - Natural Disaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation-Front Line CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eviivo Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Hotel &amp; Expedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Rate Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk with Quest Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expedia_Booking_ID__c</fullName>
        <label>Expedia Booking ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Guest_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID from PSG</description>
        <externalId>true</externalId>
        <label>External Guest Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Guest_Email__c</fullName>
        <label>Guest Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guest_Record_Closed_Time__c</fullName>
        <label>Guest Record Closed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hotel_Confirmation_Number__c</fullName>
        <label>Hotel Confirmation Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Shared_Cost__c</fullName>
        <formula>IF(AND( Booking_Net_Difference__c &gt; 0, 
OR(ISPICKVAL(Difference_Absorbed_By__c, &quot;Shared Hotel &amp; Expedia-DO NOT USE YET!&quot;),ISPICKVAL(Difference_Absorbed_By__c, &quot;Shared Hotel &amp; Expedia&quot;))),
((Booking_Net_Difference__c *  
(CASE(Paid_by_Hotel__c,&quot;10%&quot;,10,&quot;20%&quot;,20,&quot;30%&quot;,30,&quot;40%&quot;,40,&quot;50%&quot;,50,&quot;60%&quot;,60,&quot;70%&quot;,70,&quot;80%&quot;,80,&quot;90%&quot;,90,&quot;100%&quot;,100,100))
/ 100)) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Shared Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Guest_Contact_Time__c</fullName>
        <label>Initial Guest Contact Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Relocation_Case_Notes__c</fullName>
        <label>Internal Relocation Case Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_CC__c</fullName>
        <label>Last 4 Digits of CC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lodging_Operations_Agent_Lookup__c</fullName>
        <description>Lookup to users who are HPS - Lodge Ops</description>
        <label>Lodging Operations Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Guests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Booking_Rate__c</fullName>
        <label>New Booking Net Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Booking_Total__c</fullName>
        <formula>New_Booking_Rate__c  +  Other_Relocation_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Booking Total (Net Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Expedia_Booking_ID__c</fullName>
        <label>New Expedia Booking ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Hotel_Contact__c</fullName>
        <label>New Hotel Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Hotel_Name_if_out_of_network__c</fullName>
        <label>Out of Network Hotel Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Room_Type__c</fullName>
        <label>New Room Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Taxes_Fees__c</fullName>
        <label>New Taxes &amp; Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Vendor__c</fullName>
        <label>New Hotel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Nights__c</fullName>
        <formula>Check_Out_Date__c  -  Arrival_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Nights</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opaque_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opaque Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Book_Date__c</fullName>
        <label>Original Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Booking_Rate__c</fullName>
        <label>Original Booking Net Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Booking_Total__c</fullName>
        <formula>Original_Booking_Rate__c  +  Original_Taxes_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Booking Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Hotel_Confirmation__c</fullName>
        <label>Original Hotel Confirmation#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Hotel_Email_Notes__c</fullName>
        <label>Original Hotel Email Notes</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Hotel_Vendor_ID__c</fullName>
        <formula>( Case__r.Account.Expedia_Hotel_Id__c )</formula>
        <label>Original Hotel Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Room_Type__c</fullName>
        <label>Original Room Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Taxes_Fees__c</fullName>
        <label>Original Taxes &amp; Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Relocation_Cost__c</fullName>
        <label>Other Relocation Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PGI_Job_ID__c</fullName>
        <label>PGI Job ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_by_Expedia__c</fullName>
        <label>% Paid by Expedia</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_by_Hotel__c</fullName>
        <label>% Paid by Hotel</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Who_Confirmed_Availability__c</fullName>
        <inlineHelpText>Name of the person who confirmed availability at the new location.</inlineHelpText>
        <label>Person Who Confirmed Availability</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>Text( Case__r.Priority )</formula>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Vendor_ID__c</fullName>
        <label>Proposed Vendor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relocation_Cost__c</fullName>
        <formula>IF(Booking_Net_Difference__c&lt;0,&quot;0&quot;,TEXT(ROUND(Booking_Net_Difference__c,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field sets the Booking Net Difference field to &quot;0&quot; if the difference is less than &quot;0&quot;. If more than &quot;0&quot;, it rounds the number to 2 decimal places. Used for internal calculations.</inlineHelpText>
        <label>Relocation Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relocation_Email_New_Property_Details__c</fullName>
        <formula>IF(ISBLANK( New_Vendor__c ),
  New_Hotel_Name_if_out_of_network__c ,
    New_Vendor__r.Name &amp; BR() &amp;  New_Vendor__r.BillingStreet &amp; BR() &amp; New_Vendor__r.BillingCity &amp;&quot;, &quot;&amp;                    New_Vendor__r.BillingState &amp;&quot;, &quot;&amp;  New_Vendor__r.BillingPostalCode  &amp;BR () &amp;  New_Vendor__r.BillingCountry  &amp; BR() &amp;    New_Vendor__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relocation Email New Property Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relocation_Reason__c</fullName>
        <formula>TEXT( Case__r.Relocation_Reason__c )</formula>
        <label>Relocation Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relocation_Type__c</fullName>
        <formula>Text(Case__r.Relocation_Type__c)</formula>
        <label>Relocation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Market Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reassigned to Europe CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodated at Original Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reassigned to APAC CS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Response__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;00N50000001R67f=Response%20Submitted&quot;,&quot;Submit Response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Arrival__c</fullName>
        <formula>IF(Arrival_Date__c&lt;TODAY(),&quot;Past&quot;,IF(Arrival_Date__c-TODAY() &gt;3,&quot;&gt;72 hours&quot;,IF(Arrival_Date__c-TODAY()&gt;2,&quot;48-72 hours&quot;,IF(Arrival_Date__c-TODAY()&gt;1,&quot;24-48 hours&quot;,&quot;0-24 hours&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Arrival</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Person_Confirmed_Availability__c</fullName>
        <inlineHelpText>Title of person who confirmed availability</inlineHelpText>
        <label>Title of Person Confirmed Availability</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Parking_Fees__c</fullName>
        <label>Trans/Parking Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Product__c</fullName>
        <inlineHelpText>Booking Site</inlineHelpText>
        <label>Travel Product</label>
        <referenceTo>Travel_Product__c</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_Expedia_CC_used__c</fullName>
        <label>Was Expedia CC Used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Bed_Bank_Representation__c</fullName>
        <formula>IF(Case__r.Account.Wholesaler_Bed_bank_representation__c = TRUE, 
&quot;DO NOT CONTACT THE PROPERTY DIRECTLY. USE THE CONTACT SECTION FOR THE PROPERTY IN SALESFORCE.&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler/Bed Bank Representation</label>
        <type>Text</type>
    </fields>
    <label>Guest</label>
    <listViews>
        <fullName>All_Guests</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Last_Modified_Date_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Guests</label>
    </listViews>
    <listViews>
        <fullName>Guest_Contact_All_Offices</fullName>
        <columns>NAME</columns>
        <columns>Arrival_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Language__c</columns>
        <columns>Age_days__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Time_to_Arrival__c</columns>
        <columns>Expedia_Booking_ID__c</columns>
        <columns>Difference_Absorbed_By__c</columns>
        <columns>Status__c</columns>
        <columns>Booking_Site__c</columns>
        <columns>Priority__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Accommodated at original hotel,Reassigned to APAC CS</value>
        </filters>
        <filters>
            <field>Case__c</field>
            <operation>notEqual</operation>
            <value>01524808</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Guest__c.HPS_Guest_Contact</value>
        </filters>
        <filters>
            <field>Time_to_Arrival__c</field>
            <operation>equals</operation>
            <value>Past</value>
        </filters>
        <label>Guest Contact - All Offices</label>
    </listViews>
    <listViews>
        <fullName>Guest_Contact_KL</fullName>
        <columns>Case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Arrival_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Difference_Absorbed_By__c</columns>
        <columns>Age_days__c</columns>
        <columns>Booking_Site__c</columns>
        <columns>Original_Booking_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Reassigned to Europe CS,Accommodated at original hotel</value>
        </filters>
        <filters>
            <field>Assigned_Office__c</field>
            <operation>equals</operation>
            <value>Kuala Lumpur – NA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Guest__c.HPS_Guest_Contact</value>
        </filters>
        <label>Guest Contact - KL</label>
    </listViews>
    <listViews>
        <fullName>Guest_Contact_Prague</fullName>
        <columns>Case__c</columns>
        <columns>Language__c</columns>
        <columns>Arrival_Date__c</columns>
        <columns>Time_to_Arrival__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Age_days__c</columns>
        <columns>Booking_Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Assigned_Office__c</field>
            <operation>equals</operation>
            <value>Prague – NA,Prague – EMEA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Guest__c.HPS_Guest_Contact</value>
        </filters>
        <label>Guest Contact - Prague</label>
    </listViews>
    <listViews>
        <fullName>Guest_Contact_United_States_New</fullName>
        <columns>NAME</columns>
        <columns>Age_days__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Booking_Site__c</columns>
        <columns>Arrival_Date__c</columns>
        <columns>Expedia_Booking_ID__c</columns>
        <columns>Case__c</columns>
        <columns>Language__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Reassigned to Europe CS,Accommodated at original hotel</value>
        </filters>
        <filters>
            <field>Assigned_Office__c</field>
            <operation>equals</operation>
            <value>United States,United States - EMEA,United States - APAC</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Guest__c.HPS_Guest_Contact</value>
        </filters>
        <filters>
            <field>Case__c</field>
            <operation>notEqual</operation>
            <value>01524808</value>
        </filters>
        <filters>
            <field>Time_to_Arrival__c</field>
            <operation>notEqual</operation>
            <value>Past</value>
        </filters>
        <label>Guest Contact - United States - New</label>
    </listViews>
    <listViews>
        <fullName>Guest_Contact_United_States_Past</fullName>
        <columns>NAME</columns>
        <columns>Arrival_Date__c</columns>
        <columns>Expedia_Booking_ID__c</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Language__c</columns>
        <columns>Age_days__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Booking_Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Reassigned to Europe CS,Accommodated at original hotel</value>
        </filters>
        <filters>
            <field>Assigned_Office__c</field>
            <operation>equals</operation>
            <value>United States,United States - APAC,United States - EMEA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Guest__c.HPS_Guest_Contact</value>
        </filters>
        <filters>
            <field>Case__c</field>
            <operation>notEqual</operation>
            <value>United States,United States - APAC,United States - EMEA</value>
        </filters>
        <label>Guest Contact - United States - Past</label>
    </listViews>
</CustomObject>